# tq-oracle

./: .gitignore  ARCHITECTURE.md  README.md  SETTINGS.md  pyproject.toml  tq-oracle-example.toml  tq-oracle.toml.example
.github/workflows/: CI.yml
contracts/abis/: DlnSource.json  HyperliquidStrategy.json  ICustomOracle.json  IOracle.json  OracleHelper.json  Subvault.json  Vault.json
docs/: hyperliquid-cctp-restore-checklist.md
scripts/: check_cctp_inflight.py
src/: main.py  orchestrator.py  sample_flow.py
src/adapters/price_adapters/: chainlink.py
src/report/: generator.py
src/tq_oracle/: abi.py  config.py  config_loader.py  constants.py  logger.py  main.py  orchestrator.py  settings.py  state.py  units.py
src/tq_oracle/abis/: CompactCollector.json  CoreVaultsCollector.json  DlnDestination.json  ERC20.json  FeeManager.json  HyperliquidBridgeStrategy.json  HyperliquidStrategy.json  ICustomOracle.json  IOracle.json  MessageTransmitterV2.json  SafeL2.json  StakeWiseLeverageStrategy.json  StakeWiseOsTokenVaultController.json  StakeWiseOsTokenVaultEscrow.json  Subvault.json  (+5 more)
tests/: conftest.py  test_config.py  test_config_loader.py  test_orchestrator.py  test_settings.py  test_settings_validation.py  test_units.py
tests/adapters/: test_stakewise_adapter.py
tests/checks/: test_pre_checks.py  test_price_validations.py
tests/pipeline/: test_assets.py  test_run_timeout.py
tests/processors/: test_asset_aggregator.py  test_oracle_helper.py  test_price_calculator.py  test_total_assets.py
tests/report/: test_encoder.py  test_generator.py  test_publisher.py
(+66 files in other folders)
