[project]
name = "tq-oracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "hyperliquid-python-sdk>=0.19.0",
    "requests>=2.32.5",
    "safe-eth-py>=7.13.0",
    "typer>=0.19.2",
    "web3>=7.13.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.35.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.2",
]

[tool.pyrefly]
project-includes = ["src","tests"]

[project.scripts]
tq-oracle = "tq_oracle.main:run"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
